<resources>
    <string name="app_name">ProjectBat</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_feed">Feed</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_profile">Profile</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="resend_verification">Resend Verification</string>

    //For profile fragment
    <string name="username">Username</string>
    <string name="country">Country</string>
    <string name="profession">Profession</string>
    <string name="logout">Logout</string>
    <string name="Edit">Edit Profile</string>
    <string name="Update">Update</string>
    <string name="error">Error</string>
    <string name="settings">Account Settings</string>
    <string name="appSettings">Application Settings</string>

    //For makePost
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="submit">Submit Post</string>
    <string name="Location">Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile_setting">ProfileSetting</string>

    //Mapbox
    <string name="access_token">pk.eyJ1IjoidHJhcGh1bWUiLCJhIjoiY2pvd281OWdoMWljaTNrczVsMWRybDI4dCJ9.Dsx8A8zGDbnQyCmEOrbZZg</string>
</resources>
