<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/loginResendButton"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/resend_verification"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordInput"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/loginRegisterButton" />

    <EditText
        android:id="@+id/loginEmailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <EditText
        android:id="@+id/loginPasswordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="@+id/loginEmailInput"
        app:layout_constraintStart_toStartOf="@+id/loginEmailInput"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailInput" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/loginResendButton"
        app:layout_constraintStart_toStartOf="@+id/loginResendButton"
        app:layout_constraintTop_toBottomOf="@+id/loginResendButton" />

    <TextView
        android:id="@+id/loginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordInput"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInput" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/loginEmailInput"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="@+id/loginForgotPassword"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="@+id/loginForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginForgotPassword" />

</android.support.constraint.ConstraintLayout>