<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/friendMain_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".friendProfile"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/friendSecondaryLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/friendProfessionIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/profession"
            android:src="@drawable/ic_work_orange_24dp"
            app:layout_constraintEnd_toEndOf="@+id/friendCountryIcon"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/friendCountryIcon"
            app:layout_constraintTop_toBottomOf="@+id/friendCountryIcon" />

        <TextView
            android:id="@+id/friendUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:hint="@string/username"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/friendEmailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/email"
            android:src="@drawable/ic_email_orange_24dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/friendCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:hint="@string/country"
            android:text="@string/country"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/friendEmail"
            app:layout_constraintTop_toTopOf="@+id/friendCountryIcon" />

        <ImageView
            android:id="@+id/friendCountryIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/country"
            android:src="@drawable/ic_flag_orange_24dp"
            app:layout_constraintEnd_toEndOf="@+id/friendEmailIcon"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/friendEmailIcon"
            app:layout_constraintTop_toBottomOf="@+id/friendEmailIcon" />

        <TextView
            android:id="@+id/friendProfession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:hint="@string/profession"
            android:text="@string/profession"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/friendCountry"
            app:layout_constraintTop_toTopOf="@+id/friendProfessionIcon"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/friendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/email"
            android:enabled="false"
            android:hint="@string/email"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/friendUsername"
            app:layout_constraintTop_toTopOf="@+id/friendEmailIcon" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/friend_profile_image"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_person_white_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friend_profile_image" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/friendThird_layout"
        android:layout_width="match_parent"
        android:layout_height="308dp"
        app:layout_constraintTop_toBottomOf="@+id/friendSecondaryLayout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/friendRecyclerView"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>